[gd_scene load_steps=2 format=3 uid="uid://cwsubyev1jlbq"]

[ext_resource type="Script" path="res://Systems/Core/components/interaction/detector/interactable_detector.gd" id="1_567if"]

[node name="InteractableDetector" type="Node3D"]
script = ExtResource("1_567if")

[node name="TargetDetector" type="RayCast3D" parent="."]
target_position = Vector3(0, 0, -3)
collision_mask = 8
hit_from_inside = true
hit_back_faces = false
collide_with_areas = true
collide_with_bodies = false
debug_shape_custom_color = Color(0.657899, 0.155571, 0.622694, 1)

[node name="ZoneDetector" type="RayCast3D" parent="."]
collision_mask = 8
hit_from_inside = true
hit_back_faces = false
collide_with_areas = true
collide_with_bodies = false
debug_shape_custom_color = Color(0.657899, 0.155571, 0.622694, 1)
